sandc/test/fixtures/astRegression/shouldSucceed/productions/nonAssignableExpression/InstanceofExpression.sand
pub class InstanceofExpression {
    foo() {
        [
            x() instanceof Foo,
            x() instanceof Foo[],
            x() instanceof Foo[][],
            x() instanceof Foo[][][],

            x() instanceof Foo?,
            x() instanceof Foo[]?,
            x() instanceof Foo[][]?,
            x() instanceof Foo[][][]?,
        ]
    }
}