sandc/test/fixtures/astRegression/shouldFail/productions/instanceofExpression/GenericTypeInstantiation.sand
pub class GenericTypeInstantiation {
    foo() {
        x() instanceof Foo<Bar>
    }
}